Update with current PSI info

--- a/cv.tex
+++ b/cv.tex
@@ -81,12 +81,13 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 \vspace{-4em}
-\section{General}
-\cventry{Current Location}{\textnormal{Institute of Chemical Research of Catalonia (ICIQ), 43007 Tarragona, Spain}}{}{}{}{}
-\cventry{Birth}{\textnormal{Date: 30th November 1994, 90471 Nuremberg}}{}{}{}{}
+\section{General Information}
+\vspace{0.5em}
+% \cventry{Address}{\textnormal{Kornfeldstrasse 24, 5210 Windisch, Switzerland}}{}{}{}{}
+\cventry{Birth}{\textnormal{Date: 30th November 1994. Location: 90471 Nuremberg}}{}{}{}{}
 \cventry{Nationality}{\textnormal{German}}{}{}{}{}
-\cventry{E-Mail}{\textnormal{jgeiger@iciq.es}}{}{}{}{}
-% \cventry{Phone}{\textnormal{(+34)\,611644538}}{}{}{}{}
+\cventry{E-Mail}{\textnormal{julian.geiger@psi.ch}}{}{}{}{}
+\cventry{Phone}{\textnormal{(+41)\,775061926}}{}{}{}{}
 % \vspace{1em}
 
 \vspace{0.5em}
@@ -94,28 +95,27 @@
 % \cventry{years}{degree/job title}{institution/employer}{localization}{optional: grade/...}{optional: comment/job description}
 % \cventry{}{}{}{}{}{}
 %
-\cventry{10/19\,--\,present}{PhD Student}{ICIQ, N{\'u}ria L{\'o}pez research
-  group}{}{}{Fundamental studies on ceria-based single-atom catalysts using Density
-  Functional Theory, high-throughput simulations and machine learning}
+\cventry{02/24\,--\,present}{Postdoc}{Paul-Scherrer Institute (PSI)}{Materials Software and Data Group of Dr.~Giovanni Pizzi}{Switzerland}{}{}
 %
-\cventry{02/23\,--\,05/23}{Research internship}{EPFL, Nicola Marzari research group}{}{}{High-throughput study on the self-consistent evaluation of Hubbard U and V parameters of olivine and spinel Li-ion battery materials using Density Functional Perturbation Theory}
+\cventry{02/23\,--\,05/23}{Research internship}{EPFL, Nicola Marzari research group}{Switzerland}{}{High-throughput study on the self-consistent evaluation of Hubbard U and V parameters of olivine and spinel Li-ion battery materials using Density Functional Perturbation Theory}
 %
+\cventry{10/19\,--\,10/23}{PhD}{Institute of Chemical Research of Catalonia, (ICIQ), N{\'u}ria L{\'o}pez research group}{Spain}{}{Ceria-based Single-Atom Catalysts: From simplified models towards real world complexity}
 %
 \cventry{06/18\,--\,12/18}{Master Thesis}{BASF, Ansgar Sch{\"a}fer research
-  group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated
+  group (ROM/CQ)}{Germany}{Grade: 1.0}{Structure generation for the automated
   investigation of reaction networks using single-ended reaction path optimization algorithms}
 %
-\cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{}{}{Density Functional Theory study on the band alignment of anatase-TiO$_2$ surfaces in contact with water}
+\cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{UK}{}{Density Functional Theory study on the band alignment of anatase-TiO$_2$ surfaces in contact with water}
 %
-\cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg (FAU)}{}{Grade: 1.0}{}
+\cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg (FAU)}{Germany}{Grade: 1.0}{}
 %
-\cventry{04/16\,--\,07/16}{Bachelor thesis}{FAU, Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density
+\cventry{04/16\,--\,07/16}{Bachelor thesis}{FAU, Andreas G{\"o}rling research group}{Germany}{Grade: 1.0}{Density
   Functional Theory investigations on potential catalysts for CO$_2$ activation on
   the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
 %
-\cventry{2013\,--\,2016}{Chemistry B.Sc.}{FAU}{}{Grade: 1.2 (Valedictorian)}{}
+\cventry{2013\,--\,2016}{Chemistry B.Sc.}{FAU, Germany}{}{Grade: 1.2}{}
 %
-\cventry{2005\,--\,2013}{A-levels}{Adam-Kraft-Gymnasium Schwabach}{}{Grade: 1.4}{}
+\cventry{2005\,--\,2013}{A-levels}{Adam-Kraft-Gymnasium Schwabach}{Germany}{Grade: 1.4}{}
 % \vspace{1em}
 
 \vspace{0.5em}
