--- a/literature.bib
+++ b/literature.bib
@@ -1,4 +1,4 @@
-@article{Shaikhutdinov2022,
+@article{Wan2022,
   year    = {2022},
   title   = {{Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma‐Functionalized CeO2 Surfaces: Nanostructuring and Peroxo Effects}},
   author  = {Wan, Weiming and Geiger, Julian and Berdunov, Nikolay and Luna, Mauricio Lopez and Chee, See Wee and Daelman, Nathan and López, Núria and Shaikhutdinov, Shamil and Cuenya, Beatriz Roldan},
@@ -7,6 +7,7 @@
   number  = {20},
   volume  = {61}
 }
+
 @article{Geiger2022_npj,
   year    = {2022},
   title   = {{Data-driven models for ground and excited states for Single Atoms on Ceria}},
@@ -16,12 +17,14 @@
   number  = {1},
   volume  = {8}
 }
+
 @article{Geiger2022_jpcc,
   year    = {2022},
   title   = {{Coupling Metal and Support Redox Terms in Single-Atom Catalysts}},
   author  = {Geiger, Julian and López, Núria},
   journal = {The Journal of Physical Chemistry C}
 }
+
 @article{Geiger2020,
   year    = {2020},
   title   = {{Band positions of anatase (001) and (101) surfaces in contact with water from density functional theory}},
@@ -31,6 +34,7 @@
   number  = {19},
   volume  = {152}
 }
+
 @article{Geiger2022_jcc,
   year    = {2022},
   title   = {{Automated input structure generation for single‐ended reaction path optimizations}},
