fix period in wrong position in references

--- a/cv.tex
+++ b/cv.tex
@@ -208,8 +208,7 @@ University, USA)}
 
 \cvitem{2025}{Janssen, J., George, J., \textbf{Geiger, J.} et al. A Python
   workflow definition for computational materials design. \textit{arXiv
-    preprint}
-  \Colorhref{https://arxiv.org/abs/2505.20366}{arXiv:2505.20366}}.
+    preprint} \Colorhref{https://arxiv.org/abs/2505.20366}{arXiv:2505.20366}.}
 %
 \cvitem{2024}{Minotaki, M., \textbf{Geiger, J.} et al., A
   generalized model for estimating adsorption energies of single atoms on
