update current residency

--- a/cv.tex
+++ b/cv.tex
@@ -43,16 +43,13 @@
 \xpatchcmd\cventry{.}{}{}{}
 \makecvtitle
 
-%----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
 \vspace{-4em}
 \section{General Information}
-\cvitem{Birth}{\textnormal{Date: 30th November 1994. Location: 90471
-    Nuremberg}}
-\cvitem{Nationality}{\textnormal{German}}
 \cvitem{E-Mail}{\textnormal{julian.geiger@psi.ch}}
 \cvitem{Phone}{\textnormal{(+41)\,775061926}}
+\cvitem{Residence}{\textnormal{8458 Dorf, Z\"urich, Switzerland}}
+\cvitem{Nationality}{\textnormal{German}} \cvitem{Birth}{\textnormal{Date: 30th
+  Nov 1994. Location: 90471 Nuremberg}}
 
 \section{Education}
 %
